2009-09-04  Uros Bizjak  <ubizjak@gmail.com>

	PR target/41262
	* config/alpha/alpha.c (alpha_does_function_need_gp): Use
	NONDEBUG_INSN_P instead of INSN_P.

2009-09-04  Alexandre Oliva  <aoliva@redhat.com>

	PR debug/41225
	* tree-vect-stmts.c (vect_stmt_relevant_p): Skip debug uses.

2009-09-04  Alexandre Oliva  <aoliva@redhat.com>

	PR target/41252
	* config/arm/vfp.md (*cmpdf_split_vfp): Fix src mode in the second
	pattern of the split.

2009-09-04  Alexandre Oliva  <aoliva@redhat.com>

	* toplev.c (process_options): Move setter of flag_var_tracking
	before other tests that depend on it.  Move down setter of
	flag_rename_registers.  Don't enable var-tracking-assignments
	by default if selective scheduling is enabled.  Warn if both
	are enabled.

2009-09-04  Alexandre Oliva  <aoliva@redhat.com>

	* var-tracking.c (dv_is_decl_p): Adjust NULL behavior to match
	comment.  Use switch statement to catch overlaps between rtx
	and tree codes.  Accept FUNCTION_DECLs in addition to those in...
	(IS_DECL_CODE): ... here. Remove.
	(check_value_is_not_decl): Remove.
	(dv_from_decl, dv_from_value): Check after conversion.

2009-09-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41257
	* (cgraph_finalize_compilation_unit): Move finalizing aliases
	after emitting tunks.  Move emitting thunks and ctors from ...
	(cgraph_optimize): ... here.  Remove redundant
	cgraph_analyze_functions.
	* varasm.c (find_decl_and_mark_needed): Remove no longer
	necessary check.
	(finish_aliases_1): Adjust check for thunk aliases.

2009-09-04  Daniel Gutson  <dgutson@codesourcery.com>

	* config/arm/arm.md (ctzsi2): Added braces
	to avoid warning that broke booststrap.

2009-09-04  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/41112
	* tree-sra.c (build_ref_for_offset_1): Signal that we cannot
	handle variable-bounded arrays.
	(expr_with_var_bounded_array_refs_p): New function.
	(analyze_access_subtree): Call expr_with_var_bounded_array_refs_p.
